hphp/hack/test/typecheck/const_visibility_modifiers/tconst_narrow_visibility.php.exp
File "tconst_narrow_visibility.php", line 8, characters 22-22:
This member visibility is: private (Typing[4113])
File "tconst_narrow_visibility.php", line 4, characters 30-30:
public was expected
