hphp/hack/test/typecheck/const_visibility_modifiers/tconst_narrow_visibility.php
<?hh // strict

abstract class A {
  abstract public const type T;
}

class B extends A {
  private const type T = int;
}
